unpackaged/main/default/objects/litify_pm__Task_Type__c/litify_pm__Task_Type__c.object-meta.xml
<CustomObject>
    <description>Type of work completed</description>
    <label>Task Type</label>
    <nameField>
        <label>Task Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>