unpackaged/main/default/objects/litify_pm__Task_Type__c/fields/litify_pm__Stage__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Stage__c</fullName>
    <label>UTBMS Code Set</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L100 Case Assessment, Development and Administration</fullName>
            </value>
            <value>
                <fullName>L200 Pre-Trial Pleadings and Motions</fullName>
            </value>
            <value>
                <fullName>L300 Discovery</fullName>
            </value>
            <value>
                <fullName>L400 Trial Preparation and Trial</fullName>
            </value>
            <value>
                <fullName>L500 Appeal</fullName>
            </value>
            <value>
                <fullName>A100 Activities</fullName>
            </value>
            <value>
                <fullName>E100 Expenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>