unpackaged/main/default/objects/litify_pm__Task_Type__c/fields/litify_pm__Uniform_Task_Based_Management_System_ID__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Uniform_Task_Based_Management_System_ID__c</fullName>
    <description>The Uniform Task-Based Management System (UTBMS) is a set of codes designed to standardize categorization and facilitate analysis of legal work and expenses.</description>
    <inlineHelpText>The Uniform Task-Based Management System (UTBMS) is a set of codes designed to standardize categorization and facilitate analysis of legal work and expenses.</inlineHelpText>
    <label>Uniform Task-Based Management System ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>