unpackaged/main/default/objects/litify_pm__Task_Type__c/listViews/litify_pm__All.listView-meta.xml
<ListView>
    <fullName>litify_pm__All</fullName>
    <columns>NAME</columns>
    <columns>litify_pm__Uniform_Task_Based_Management_System_ID__c</columns>
    <columns>litify_pm__Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>