unpackaged/main/default/objects/litify_pm__Task_Type__c/listViews/litify_pm__Expenses.listView-meta.xml
<ListView>
    <fullName>litify_pm__Expenses</fullName>
    <columns>NAME</columns>
    <columns>litify_pm__Stage__c</columns>
    <columns>litify_pm__Uniform_Task_Based_Management_System_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>litify_pm__Type__c</field>
        <operation>equals</operation>
        <value>Expense</value>
    </filters>
    <label>Expenses</label>
</ListView>